--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
@@ -88,4 +88,7 @@
             </div>
         </div>
     </div>
+    <button mat-fab class="audio-chat-fab" color="accent" (click)="openAudioChat()">
+        <mat-icon>smart_toy</mat-icon>
+    </button>
 </div>
