--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.scss
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.scss
@@ -197,3 +197,10 @@
     opacity: 0.5;
     font-style: italic;
 }
+
+.audio-chat-fab {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    z-index: 1000;
+}
