--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -74,7 +74,7 @@
                                 }
                             </button>
                             <mat-divider></mat-divider>
-                            <button mat-menu-item>
+                            <button mat-menu-item (click)="printStockLabel(row)">
                                 <mat-icon>print</mat-icon>
                                 Print Stock Label
                             </button>
