test print label

--- a/ui/pantry-ui/src/app/components/hardware/hardware-list/hardware-list.component.html
+++ b/ui/pantry-ui/src/app/components/hardware/hardware-list/hardware-list.component.html
@@ -32,6 +32,12 @@
                             </div>
                             <div matListItemLine class="text-xs text-gray-400">Last Seen: {{ device.lastSeen |
                                 date:'short' }}</div>
+                            <div matListItemMeta *ngIf="device.type === 'PRINTER' && device.status === 'ONLINE'">
+                                <button mat-icon-button color="primary" (click)="printTestLabel(device)"
+                                    matTooltip="Print Test Label">
+                                    <mat-icon>print</mat-icon>
+                                </button>
+                            </div>
                         </mat-list-item>
                     </div>
                     <ng-template #noDevices>
