--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -1,14 +1,20 @@
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/']" (click)="onLinkClick()">Home</a>
     <a mat-list-item [routerLink]="['/products']" (click)="onLinkClick()">Products</a>
-
-    <a mat-list-item [routerLink]="['/recipes']" (click)="onLinkClick()">Recipes</a>
     <a mat-list-item [routerLink]="['/shopping-list']" (click)="onLinkClick()">Shopping List</a>
-    <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
+    <a mat-list-item [routerLink]="['/recipes']" (click)="onLinkClick()">Recipes</a>
+    <a mat-list-item [routerLink]="['/meal-plan']" (click)="onLinkClick()">Meal Plan</a>
+
+    <mat-divider></mat-divider>
+
     <a mat-list-item [routerLink]="['/barcode/scanner']" (click)="onLinkClick()">Barcode Scanner</a>
-    <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
     <a mat-list-item [routerLink]="['/gemini-chat']" (click)="onLinkClick()">Gemini Chat</a>
+    <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
     <a mat-list-item [routerLink]="['/quick-label']" (click)="onLinkClick()">Quick Label</a>
+
+    <mat-divider></mat-divider>
+
     <a mat-list-item [routerLink]="['/settings/family']" (click)="onLinkClick()">Family Preferences</a>
+    <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
     <a mat-list-item [routerLink]="['/settings']" (click)="onLinkClick()">Settings</a>
 </mat-nav-list>
