--- a/ui/pantry-ui/src/app/home/home.component.html
+++ b/ui/pantry-ui/src/app/home/home.component.html
@@ -56,6 +56,10 @@
 
     <div class="content-grid">
         <section class="widget-section">
+            <app-upcoming-tasks-widget></app-upcoming-tasks-widget>
+        </section>
+
+        <section class="widget-section">
             <div class="section-header">
                 <h2>Expiring Soon</h2>
                 <a mat-button [routerLink]="['/products']">View All</a>
