--- a/ui/pantry-ui/src/app/recipe-edit/recipe-edit.component.html
+++ b/ui/pantry-ui/src/app/recipe-edit/recipe-edit.component.html
@@ -47,12 +47,87 @@
             </div>
         </mat-tab>
         <mat-tab label="Ingredients">
-            <div class="row">
-                <mat-form-field class="w-100">
-                    <mat-label>Ingredients</mat-label>
-                    <textarea name="ingredientText" matInput [(ngModel)]="recipe.ingredientText" rows="10"></textarea>
-                </mat-form-field>
+            <div class="row mt-3 mb-2">
+                <div class="col-12">
+                    <button mat-raised-button color="accent" type="button" (click)="addIngredient()">
+                        <mat-icon>add</mat-icon> Add Ingredient
+                    </button>
+                    <span class="ms-3 text-muted" *ngIf="recipe.ingredients?.length === 0">No ingredients added
+                        yet.</span>
+                </div>
             </div>
+
+            <div *ngFor="let ing of recipe.ingredients; let i = index; trackBy: trackByFn"
+                class="row align-items-center mb-2">
+                <div class="col-md-5 col-12">
+                    <mat-form-field class="w-100">
+                        <mat-label>Ingredient Name / Product</mat-label>
+                        <input type="text" matInput [(ngModel)]="ing.name" [name]="'ing-name-' + i"
+                            [matAutocomplete]="auto">
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onProductSelected(ing, $event)">
+                            <mat-option *ngFor="let prod of getFilteredProducts(ing.name)" [value]="prod">
+                                {{prod.title}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                </div>
+                <div class="col-md-3 col-6">
+                    <mat-form-field class="w-100">
+                        <mat-label>Amount</mat-label>
+                        <input type="number" matInput [(ngModel)]="ing.amount" [name]="'ing-amount-' + i">
+                    </mat-form-field>
+                </div>
+                <div class="col-md-3 col-6">
+                    <mat-form-field class="w-100">
+                        <mat-label>Unit</mat-label>
+                        <input type="text" matInput [(ngModel)]="ing.unit" [name]="'ing-unit-' + i">
+                    </mat-form-field>
+                </div>
+                <div class="col-md-1 col-12 text-end text-md-start">
+                    <button mat-icon-button color="warn" (click)="removeIngredient(i)"
+                        type="button"><mat-icon>delete</mat-icon></button>
+                </div>
+            </div>
+        </mat-tab>
+        <mat-tab label="Prep & Thaw">
+            <div class="row mt-3 mb-2">
+                <div class="col-12 d-flex gap-2">
+                    <button mat-raised-button color="primary" type="button" (click)="addPrepTask()">
+                        <mat-icon>add</mat-icon> Add Prep Task
+                    </button>
+                    <button mat-stroked-button color="accent" type="button" (click)="generateThawAdvice()"
+                        [disabled]="!recipe.ingredients || recipe.ingredients.length === 0">
+                        <mat-icon>auto_awesome</mat-icon> Generate Thaw Tasks
+                    </button>
+                </div>
+                <div class="col-12 mt-2">
+                    <span class="text-muted" *ngIf="recipe.prepTasks?.length === 0">No prep tasks added.</span>
+                </div>
+            </div>
+
+            <div *ngFor="let task of recipe.prepTasks; let i = index; trackBy: trackByFn"
+                class="row align-items-center mb-2">
+                <div class="col-md-7 col-12">
+                    <mat-form-field class="w-100">
+                        <mat-label>Task Description</mat-label>
+                        <input matInput [(ngModel)]="task.description" [name]="'task-desc-' + i"
+                            placeholder="e.g. Marinate Chicken">
+                    </mat-form-field>
+                </div>
+                <div class="col-md-3 col-6">
+                    <mat-form-field class="w-100">
+                        <mat-label>Days Ahead</mat-label>
+                        <input type="number" matInput [(ngModel)]="task.daysInAdvance" [name]="'task-days-' + i"
+                            min="0">
+                        <span matSuffix class="ms-1 small">days</span>
+                    </mat-form-field>
+                </div>
+                <div class="col-md-2 col-6 text-end">
+                    <button mat-icon-button color="warn" (click)="removePrepTask(i)"
+                        type="button"><mat-icon>delete</mat-icon></button>
+                </div>
+            </div>
+
         </mat-tab>
         <mat-tab label="Steps">
             <button mat-icon-button (click)="addStep()"><mat-icon>add</mat-icon></button>
